# engine_cli

./: .gitignore  README.md  pyproject.toml
dev/reports/: module_boundaries_audit.md  plan_guideline_review.md
src/engine_cli/: __init__.py  __main__.py  app.py
src/engine_cli/application/: __init__.py
src/engine_cli/application/agent_runtimes/: __init__.py  (+4 more)
src/engine_cli/config/: __init__.py  defaults.py  errors.py  json_loader.py  models.py  resolver.py
src/engine_cli/domain/: __init__.py  mode.py
src/engine_cli/infrastructure/: __init__.py
src/engine_cli/resources/: app.tcss
tests/: test_agent_runtime_lifecycle_service.py  test_agent_runtime_manager.py  test_agent_runtime_supervisor.py  test_agent_runtime_vertical_slice.py  test_app.py  test_app_composition.py  test_app_paths.py  test_app_persistence.py  test_config_json_loader.py  test_config_resolver.py  test_domain_models.py  test_execution_service.py  test_local_process_manager.py  test_package_imports.py  test_process_log_streamer.py  test_profile_selection_service.py  test_server_command_service.py  test_server_inspection.py  test_server_instance_lifecycle.py  test_server_instance_manager.py  test_server_instance_vertical_slice.py  test_server_runtime_state_resolver.py  test_session_context.py  test_session_coordinator.py  test_sqlite_agent_runtime_repository.py  test_sqlite_server_instance_repository.py  test_sqlite_task_run_repository.py  test_terminal_state.py  test_tui_panel_phase2.py  test_tui_primitives.py  test_tui_shell_phase1.py  test_tui_shell_phase4.py  test_tui_terminal_body.py
(+82 files in other folders)
